<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_privacy">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="location"
            android:title="@string/location"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="password"
            android:summary="@string/recommended"
            android:title="@string/password"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="clear_cache_exit"
            android:title="@string/cache"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="finish_on_pause"
            android:title="@string/finish_on_pause"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="do_not_track"
            android:title="@string/do_not_track"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="remove_identifying_headers"
            android:title="@string/remove_identifying_headers"/>
        <Preference
            android:key="clear_private_data"
            android:title="@string/title_clear_all"/>
    </PreferenceCategory>
</PreferenceScreen>