<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="com.lechneralexander.privatebrowser.fragment.GeneralSettingsFragment"
        android:title="@string/settings_general"/>
    <header
        android:fragment="com.lechneralexander.privatebrowser.fragment.DisplaySettingsFragment"
        android:title="@string/settings_display"/>
    <header
        android:fragment="com.lechneralexander.privatebrowser.fragment.PrivacySettingsFragment"
        android:title="@string/settings_privacy"/>
    <header
        android:fragment="com.lechneralexander.privatebrowser.fragment.AdvancedSettingsFragment"
        android:title="@string/settings_advanced"/>
    <header
        android:fragment="com.lechneralexander.privatebrowser.fragment.AboutSettingsFragment"
        android:summary="@string/settings_about_explain"
        android:title="@string/settings_about"/>
</preference-headers>